# email_trigger_env

./: .dockerignore  Dockerfile  inference.py  openenv.yaml  pyproject.toml
email_triage_env/: .dockerignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  pyproject.toml
email_triage_env/server/: app.py
server/: app.py  environment.py  requirements.txt
